{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "ffa8afc8-6e15-4502-bdb0-f76aab8eb042",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "9f0d6f15-cbb8-4cd1-b568-c98f25a6e874",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryTouchContact",
                    "type": "PassThrough",
                    "id": "3023499a-958c-49aa-ab5b-3c3bebe64c3e",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "b0337e96-c1b9-4843-a188-b2e7906b7f10",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "PassThrough",
                    "id": "652e7ffe-45cb-4c5e-9565-4fbc7025a899",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f99beb94-cd34-4de7-8993-81f18bb85c61",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd29cafa-4f39-4b75-bef4-9d6177295ff2",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4b0c036-0700-4b54-96a0-75f8e1116051",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94fc7458-770d-4eaf-be4d-08c3c472de62",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}